[gd_scene load_steps=31 format=3 uid="uid://b1whxbip2vb3h"]

[ext_resource type="Script" path="res://app/scenes/buttons.gd" id="1_m58cn"]
[ext_resource type="Script" path="res://app/scenes/texts.gd" id="2_a7cnu"]
[ext_resource type="Texture2D" uid="uid://w6qki40ujrs4" path="res://assets/textures/help_lesson/lesson1.png" id="3_n0qjt"]
[ext_resource type="Texture2D" uid="uid://bideybubwhh6h" path="res://assets/textures/help_lesson/lesson2.png" id="4_12182"]
[ext_resource type="Texture2D" uid="uid://bpuquo3fpqibv" path="res://assets/textures/help_lesson/lesson3.png" id="5_fhib8"]
[ext_resource type="Texture2D" uid="uid://k0biouq1ibdv" path="res://assets/textures/help_lesson/lesson4.png" id="6_rukns"]
[ext_resource type="Texture2D" uid="uid://dyeq8j3dlqvhi" path="res://assets/textures/help_lesson/lesson5.png" id="7_j4fso"]
[ext_resource type="Texture2D" uid="uid://bjlpp81peg5tt" path="res://assets/textures/help_lesson/lesson6.png" id="8_ejl4c"]
[ext_resource type="Texture2D" uid="uid://dcyct76rqq0qx" path="res://assets/textures/help_lesson/lesson7.png" id="9_1sdb7"]
[ext_resource type="Texture2D" uid="uid://cvi36ehx5qxyh" path="res://assets/textures/help_lesson/lesson8.png" id="10_4g0hj"]
[ext_resource type="Texture2D" uid="uid://bx6so06mqxaje" path="res://assets/textures/help_lesson/lesson9.png" id="11_axtkt"]
[ext_resource type="Texture2D" uid="uid://cvvt24yi638w4" path="res://assets/textures/help_lesson/lesson10.png" id="12_0ia3o"]
[ext_resource type="Texture2D" uid="uid://qhyhlf38wr24" path="res://assets/textures/help_keyboard/keyboard2.png" id="14_lo0am"]
[ext_resource type="Texture2D" uid="uid://bddwo1gqbrpbg" path="res://assets/textures/help_keyboard/keyboard3.png" id="15_xmi74"]
[ext_resource type="Texture2D" uid="uid://bk45r00iuot8n" path="res://assets/textures/help_keyboard/keyboard4.png" id="16_2jsod"]
[ext_resource type="Texture2D" uid="uid://de13wqegbpaie" path="res://assets/textures/help_keyboard/keyboard5.png" id="17_ye2x0"]
[ext_resource type="Texture2D" uid="uid://dmk5hgn1wm38m" path="res://assets/textures/help_keyboard/fingers.png" id="18_1rn4h"]
[ext_resource type="Texture2D" uid="uid://4ok4g2av3t1y" path="res://assets/textures/help_keyboard/keyboard6.png" id="19_idsnu"]
[ext_resource type="Texture2D" uid="uid://c8etvbt8id3wh" path="res://assets/textures/help_keyboard/keyboard7.png" id="20_erpyp"]
[ext_resource type="Texture2D" uid="uid://cfawpipskun4o" path="res://assets/textures/help_keyboard/keyboard8.png" id="21_rxaa7"]
[ext_resource type="Texture2D" uid="uid://ba8kwrdo25otu" path="res://assets/textures/help_keyboard/keyboard9.png" id="22_r4ujo"]
[ext_resource type="Texture2D" uid="uid://d1kjwgo0llq0c" path="res://assets/textures/export/export1.png" id="23_n4nua"]
[ext_resource type="Texture2D" uid="uid://1kvk7ngiygjn" path="res://assets/textures/help_keyboard/keyboard10.png" id="23_r5ccn"]
[ext_resource type="Texture2D" uid="uid://86lrv76utptu" path="res://assets/textures/export/export2.png" id="24_druh6"]
[ext_resource type="Texture2D" uid="uid://fyq7sudl7kpt" path="res://assets/textures/export/export3.png" id="25_nxty3"]
[ext_resource type="Texture2D" uid="uid://bl7sa7g803ndw" path="res://assets/textures/import/import1.png" id="26_t6gfs"]
[ext_resource type="Texture2D" uid="uid://bheoifp0kmlb4" path="res://assets/textures/import/import2.png" id="27_00pp4"]
[ext_resource type="Texture2D" uid="uid://cqcib7oh1gmcy" path="res://assets/textures/import/import3.png" id="28_i7mhg"]
[ext_resource type="Texture2D" uid="uid://6xhxt2vcvq5u" path="res://assets/textures/import/import4.png" id="29_c8qpa"]

[sub_resource type="ButtonGroup" id="ButtonGroup_eaqi0"]
resource_name = "help_menu"

[node name="help" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_use_anchors_ = true

[node name="main" type="HBoxContainer" parent="margin"]
layout_mode = 2
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="menu" type="ScrollContainer" parent="margin/main"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="buttons" type="VBoxContainer" parent="margin/main/menu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_m58cn")

[node name="about" type="Button" parent="margin/main/menu/buttons"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "key_about"
flat = true

[node name="version" type="Button" parent="margin/main/menu/buttons"]
layout_mode = 2
toggle_mode = true
text = "key_version"
flat = true

[node name="vk" type="LinkButton" parent="margin/main/menu/buttons"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_eaqi0")
text = "                      VK"
underline = 2
uri = "https://vk.com/s100mina"

[node name="github" type="LinkButton" parent="margin/main/menu/buttons"]
layout_mode = 2
toggle_mode = true
text = "                  GitHub"
underline = 2
uri = "https://github.com/Medex81/100mina"

[node name="telegram" type="LinkButton" parent="margin/main/menu/buttons"]
layout_mode = 2
toggle_mode = true
text = "                Telegram"
underline = 2
uri = "https://t.me/s100mina"

[node name="igrovoy_club" type="LinkButton" parent="margin/main/menu/buttons"]
layout_mode = 2
toggle_mode = true
text = "             Igrovoy club"
underline = 2
uri = "https://vk.com/igrovoy.club"

[node name="create_lesson" type="Button" parent="margin/main/menu/buttons"]
layout_mode = 2
text = "key_create_lesson"
flat = true

[node name="create_keyboard" type="Button" parent="margin/main/menu/buttons"]
layout_mode = 2
text = "key_create_keyboard"
flat = true

[node name="export" type="Button" parent="margin/main/menu/buttons"]
layout_mode = 2
text = "key_export"
flat = true

[node name="import" type="Button" parent="margin/main/menu/buttons"]
layout_mode = 2
text = "key_import"
flat = true

[node name="view" type="ScrollContainer" parent="margin/main"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="texts" type="VBoxContainer" parent="margin/main/view"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5
script = ExtResource("2_a7cnu")

[node name="about" type="Label" parent="margin/main/view/texts"]
visible = false
layout_mode = 2
text = "key_about_text"
autowrap_mode = 3

[node name="version" type="Label" parent="margin/main/view/texts"]
visible = false
layout_mode = 2
text = "0.1"
autowrap_mode = 3

[node name="create_lesson" type="VBoxContainer" parent="margin/main/view/texts"]
visible = false
layout_mode = 2

[node name="pic1" type="TextureRect" parent="margin/main/view/texts/create_lesson"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("3_n0qjt")
expand_mode = 1
stretch_mode = 5

[node name="key_E" type="Label" parent="margin/main/view/texts/create_lesson"]
layout_mode = 2
text = "key_E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pic2" type="TextureRect" parent="margin/main/view/texts/create_lesson"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("4_12182")
expand_mode = 1
stretch_mode = 5

[node name="pic3" type="TextureRect" parent="margin/main/view/texts/create_lesson"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("5_fhib8")
expand_mode = 1
stretch_mode = 5

[node name="pic4" type="TextureRect" parent="margin/main/view/texts/create_lesson"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("6_rukns")
expand_mode = 1
stretch_mode = 5

[node name="pic5" type="TextureRect" parent="margin/main/view/texts/create_lesson"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("7_j4fso")
expand_mode = 1
stretch_mode = 5

[node name="pic6" type="TextureRect" parent="margin/main/view/texts/create_lesson"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("8_ejl4c")
expand_mode = 1
stretch_mode = 5

[node name="pic7" type="TextureRect" parent="margin/main/view/texts/create_lesson"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("9_1sdb7")
expand_mode = 1
stretch_mode = 5

[node name="pic8" type="TextureRect" parent="margin/main/view/texts/create_lesson"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("10_4g0hj")
expand_mode = 1
stretch_mode = 5

[node name="pic9" type="TextureRect" parent="margin/main/view/texts/create_lesson"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("11_axtkt")
expand_mode = 1
stretch_mode = 5

[node name="pic10" type="TextureRect" parent="margin/main/view/texts/create_lesson"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("12_0ia3o")
expand_mode = 1
stretch_mode = 5

[node name="create_keyboard" type="VBoxContainer" parent="margin/main/view/texts"]
visible = false
layout_mode = 2

[node name="key_E" type="Label" parent="margin/main/view/texts/create_keyboard"]
layout_mode = 2
text = "key_E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pic2" type="TextureRect" parent="margin/main/view/texts/create_keyboard"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("14_lo0am")
expand_mode = 1
stretch_mode = 5

[node name="pic3" type="TextureRect" parent="margin/main/view/texts/create_keyboard"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("15_xmi74")
expand_mode = 1
stretch_mode = 5

[node name="pic4" type="TextureRect" parent="margin/main/view/texts/create_keyboard"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("16_2jsod")
expand_mode = 1
stretch_mode = 5

[node name="pic5" type="TextureRect" parent="margin/main/view/texts/create_keyboard"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("17_ye2x0")
expand_mode = 1
stretch_mode = 5

[node name="pic_fingers" type="TextureRect" parent="margin/main/view/texts/create_keyboard"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("18_1rn4h")
expand_mode = 1
stretch_mode = 5

[node name="pic6" type="TextureRect" parent="margin/main/view/texts/create_keyboard"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("19_idsnu")
expand_mode = 1
stretch_mode = 5

[node name="pic7" type="TextureRect" parent="margin/main/view/texts/create_keyboard"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("20_erpyp")
expand_mode = 1
stretch_mode = 5

[node name="pic8" type="TextureRect" parent="margin/main/view/texts/create_keyboard"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("21_rxaa7")
expand_mode = 1
stretch_mode = 5

[node name="pic9" type="TextureRect" parent="margin/main/view/texts/create_keyboard"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("22_r4ujo")
expand_mode = 1
stretch_mode = 5

[node name="pic10" type="TextureRect" parent="margin/main/view/texts/create_keyboard"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("23_r5ccn")
expand_mode = 1
stretch_mode = 5

[node name="export" type="VBoxContainer" parent="margin/main/view/texts"]
visible = false
layout_mode = 2

[node name="pic2" type="TextureRect" parent="margin/main/view/texts/export"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("23_n4nua")
expand_mode = 1
stretch_mode = 5

[node name="pic3" type="TextureRect" parent="margin/main/view/texts/export"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("24_druh6")
expand_mode = 1
stretch_mode = 5

[node name="pic4" type="TextureRect" parent="margin/main/view/texts/export"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("25_nxty3")
expand_mode = 1
stretch_mode = 5

[node name="import" type="VBoxContainer" parent="margin/main/view/texts"]
visible = false
layout_mode = 2

[node name="pic1" type="TextureRect" parent="margin/main/view/texts/import"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("26_t6gfs")
expand_mode = 1
stretch_mode = 5

[node name="pic2" type="TextureRect" parent="margin/main/view/texts/import"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("27_00pp4")
expand_mode = 1
stretch_mode = 5

[node name="pic3" type="TextureRect" parent="margin/main/view/texts/import"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("28_i7mhg")
expand_mode = 1
stretch_mode = 5

[node name="pic4" type="TextureRect" parent="margin/main/view/texts/import"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("29_c8qpa")
expand_mode = 1
stretch_mode = 5

[connection signal="send_click_help_button" from="margin/main/menu/buttons" to="margin/main/view/texts" method="on_press_button"]
[connection signal="pressed" from="margin/main/menu/buttons/about" to="margin/main/menu/buttons" method="_on_about_pressed"]
[connection signal="pressed" from="margin/main/menu/buttons/version" to="margin/main/menu/buttons" method="_on_version_pressed"]
[connection signal="pressed" from="margin/main/menu/buttons/vk" to="margin/main/menu/buttons" method="_on_vk_pressed"]
[connection signal="pressed" from="margin/main/menu/buttons/github" to="margin/main/menu/buttons" method="_on_vk_pressed"]
[connection signal="pressed" from="margin/main/menu/buttons/telegram" to="margin/main/menu/buttons" method="_on_vk_pressed"]
[connection signal="pressed" from="margin/main/menu/buttons/igrovoy_club" to="margin/main/menu/buttons" method="_on_vk_pressed"]
[connection signal="pressed" from="margin/main/menu/buttons/create_lesson" to="margin/main/menu/buttons" method="_on_create_lesson_pressed"]
[connection signal="pressed" from="margin/main/menu/buttons/create_keyboard" to="margin/main/menu/buttons" method="_on_create_keyboard_pressed"]
[connection signal="pressed" from="margin/main/menu/buttons/export" to="margin/main/menu/buttons" method="_on_export_pressed"]
[connection signal="pressed" from="margin/main/menu/buttons/import" to="margin/main/menu/buttons" method="_on_import_pressed"]
